--- a/calculators/index.html
+++ b/calculators/index.html
@@ -46,7 +46,7 @@ permalink: /calculators/
       </div>
       <h3 class="text-xl font-semibold text-gray-800 mb-2">Retirement Calculator</h3>
       <p class="text-gray-600 mb-4">Plan your retirement corpus and ensure financial security for your golden years.</p>
-      <a href="/calculators/retirement-calculator/" class="inline-flex items-center text-purple-600 font-medium hover:text-purple-700 transition-colors">
+      <a href="{{ '/calculators/sip-calculator/' | relative_url }}" class="inline-flex items-center text-purple-600 font-medium hover:text-purple-700 transition-colors">
         Calculate Now
         <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
       </a>
