--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@ title: About
             </div>
 
             <div class="mt-12 text-center">
-                <a href="index.html#contact" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
+                <a href="{{ '/#contact' | relative_url }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
                     Contact Our Team
                     <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                 </a>
