--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@ title: Blog
         Our team is ready to guide you through every step of the process.
       </p>
       <div class="mt-10" data-aos="fade-up" data-aos-delay="200">
-        <a href="index.html#contact" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-white hover:bg-blue-50">
+        <a href="{{ '/#contact' | relative_url }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-white hover:bg-blue-50">
           Get Started
           <i data-feather="arrow-right" class="ml-2"></i>
         </a>
