--- a/calculators/index.html
+++ b/calculators/index.html
@@ -20,7 +20,7 @@ permalink: /calculators/
       </div>
       <h3 class="text-xl font-semibold text-gray-800 mb-2">SIP Calculator</h3>
       <p class="text-gray-600 mb-4">Calculate returns on your Systematic Investment Plan and plan your wealth creation journey.</p>
-      <a href="/calculators/sip-calculator/" class="inline-flex items-center text-blue-600 font-medium hover:text-blue-700 transition-colors">
+      <a href="{{ '/calculators/sip-calculator/' | relative_url }}" class="inline-flex items-center text-blue-600 font-medium hover:text-blue-700 transition-colors">
         Calculate Now
         <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
       </a>
