--- a/blog.html
+++ b/blog.html
@@ -65,21 +65,7 @@ permalink: /blog/
   </div>
 
   <!-- CTA Section -->
-  <div class="bg-[#008080]">
-    <div class="max-w-7xl mx-auto py-16 px-4 sm:py-6 sm:px-6 lg:px-8 text-center">
-      <h2 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl" data-aos="fade-up">
-        Ready to start your investment journey?
-      </h2>
-      <p class="mt-6 max-w-3xl mx-auto text-xl text-blue-100" data-aos="fade-up" data-aos-delay="100">
-        Our team is ready to guide you through every step of the process.
-      </p>
-      <div class="mt-10" data-aos="fade-up" data-aos-delay="200">
-        <a href="{{ '/#contact' | relative_url }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-white hover:bg-blue-50">
-          Get Started
-          <i data-feather="arrow-right" class="ml-2"></i>
-        </a>
-      </div>
-    </div>
-  </div>
+  {% include cta.html %}
+
 
 </body>
