--- a/calculators/index.html
+++ b/calculators/index.html
@@ -26,18 +26,18 @@ permalink: /calculators/
       </a>
     </div>
 
-    <!-- EMI Calculator Card -->
-    <!-- <div class="calculator-card bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1" data-aos="fade-up" data-aos-delay="250">
+    <!-- step-up Calculator Card -->
+    <div class="calculator-card bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1" data-aos="fade-up" data-aos-delay="250">
       <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-4">
         <i data-feather="credit-card" class="text-green-600"></i>
       </div>
-      <h3 class="text-xl font-semibold text-gray-800 mb-2">EMI Calculator</h3>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Step-Up SIP Calculator</h3>
       <p class="text-gray-600 mb-4">Determine your Equated Monthly Installments for loans and manage your debt effectively.</p>
-      <a href="/calculators/emi-calculator/" class="inline-flex items-center text-green-600 font-medium hover:text-green-700 transition-colors">
+      <a href="{{ '/calculators/stepup-sip-calculator/' | relative_url }}" class="inline-flex items-center text-green-600 font-medium hover:text-green-700 transition-colors">
         Calculate Now
         <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
       </a>
-    </div> -->
+    </div>
 
     <!-- Retirement Calculator Card -->
     <div class="calculator-card bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1" data-aos="fade-up" data-aos-delay="350">
@@ -46,7 +46,7 @@ permalink: /calculators/
       </div>
       <h3 class="text-xl font-semibold text-gray-800 mb-2">Retirement Calculator</h3>
       <p class="text-gray-600 mb-4">Plan your retirement corpus and ensure financial security for your golden years.</p>
-      <a href="{{ '/calculators/sip-calculator/' | relative_url }}" class="inline-flex items-center text-purple-600 font-medium hover:text-purple-700 transition-colors">
+      <a href="{{ '/calculators/retirement-calculator/' | relative_url }}" class="inline-flex items-center text-purple-600 font-medium hover:text-purple-700 transition-colors">
         Calculate Now
         <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
       </a>
@@ -54,23 +54,7 @@ permalink: /calculators/
   </div>     
 </main>
 <!-- CTA Section -->
-<section class="bg-[#008080] w-full">
-    <div class="max-w-7xl mx-auto py-4 px-4 sm:py-8 sm:px-6 lg:px-8 text-center">
-      <h2 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl" data-aos="fade-up">
-        Ready to start your investment journey?
-      </h2>
-      <p class="mt-6 max-w-3xl mx-auto text-xl text-blue-100" data-aos="fade-up" data-aos-delay="100">
-        Our financial calculators are designed to help you make informed decisions about your money.
-      </p>
-      <div class="mt-10" data-aos="fade-up" data-aos-delay="200">
-        <a href="/#contact" 
-           class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-white hover:bg-blue-50">
-          Get Started
-          <i data-feather="arrow-right" class="ml-2"></i>
-        </a>
-      </div>
-    </div>
-  </section>
+{% include cta.html %}
 
 <script>
   AOS.init({
