--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ permalink: /
                             </a>
                         </div>
                         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-                            <a href="process.html" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-500 bg-opacity-60 hover:bg-opacity-70 md:py-4 md:text-lg md:px-10">
+                            <a href="{{ '/process/' | relative_url }}" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-500 bg-opacity-60 hover:bg-opacity-70 md:py-4 md:text-lg md:px-10">
                                 Learn More
                             </a>
                         </div>
@@ -119,7 +119,7 @@ permalink: /
                     </p>
                     <div class="mt-8">
                         <div class="inline-flex rounded-md shadow">
-                            <a href="process.html" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700">
+                            <a href="{{ '/process/' | relative_url }}" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700">
                                 Learn About Our Process
                                 <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                             </a>
@@ -235,7 +235,7 @@ permalink: /
       {% endfor %}
         </div>
             <div class="mt-12 text-center">
-                <a href="blog.html" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
+                <a href="{{ '/blog/' | relative_url }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
                 View All Articles
                 <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
                 </a>
