--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@ permalink: /about/
                 <div class="team-member bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300" data-aos="fade-up" data-aos-delay="300">
                     <img class="w-full h-56 object-cover" src="http://static.photos/people/640x360/8" alt="Team member">
                     <div class="p-6">
-                        <h3 class="text-lg font-medium text-gray-900">Sarah Johnson</h3>
+                        <h3 class="text-lg font-medium text-gray-900">Bishal Ghosh</h3>
                         <p class="mt-1 text-sm text-blue-600">Chief Investment Officer</p>
                         <p class="mt-2 text-gray-500">
                             15 years of investment research experience. MBA in Finance from Wharton, Chartered Alternative Investment Analyst (CAIA).
@@ -208,7 +208,7 @@ permalink: /about/
                 <div class="team-member bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300" data-aos="fade-up" data-aos-delay="400">
                     <img class="w-full h-56 object-cover" src="http://static.photos/people/640x360/9" alt="Team member">
                     <div class="p-6">
-                        <h3 class="text-lg font-medium text-gray-900">Michael Chen</h3>
+                        <h3 class="text-lg font-medium text-gray-900">Somali Manna</h3>
                         <p class="mt-1 text-sm text-blue-600">Head of Client Relations</p>
                         <p class="mt-2 text-gray-500">
                             12 years in client advisory roles. Certified Financial Planner (CFP) with expertise in retirement planning.
