--- a/about.html
+++ b/about.html
@@ -166,33 +166,33 @@ permalink: /about/
                 </p>
             </div>
 
-            <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+            <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-2 justify-items-center">
                 <div class="team-member bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300" data-aos="fade-up" data-aos-delay="200">
-                    <img class="w-full h-56 object-cover" src="http://static.photos/people/640x360/7" alt="Team member">
+                    <img class="w-full h-56 object-cover" src="{{ '/assets/images/team/bob-ghosh1.png' | relative_url }}" alt="Team member">
                     <div class="p-6">
                         <h3 class="text-lg font-medium text-gray-900">Bob Ghosh</h3>
-                        <p class="mt-1 text-sm text-blue-600">Co-Founder & CEO</p>
+                        <p class="mt-1 text-sm text-blue-600">Founder & CEO</p>
                         <p class="mt-2 text-gray-500">
-                            10+ years in Equities and mutual Funds. An Engineer in Communications & NISM Certified Retirement Planner (XVII).
+                            10+ years in Equities and mutual Funds. An Engineer in Communications & NISM Certified Mutual Funds advisor.
                         </p>
                         <div class="mt-4 flex space-x-4">
-                            <a href="#" class="text-gray-400 hover:text-blue-600">
+                            <a href="https://www.linkedin.com/in/bobghosh91" target="_blank" class="text-gray-400 hover:text-blue-600">
                                 <i data-feather="linkedin" class="h-5 w-5"></i>
                             </a>
-                            <a href="#" class="text-gray-400 hover:text-blue-600">
+                            <!-- <a href="#" class="text-gray-400 hover:text-blue-600">
                                 <i data-feather="mail" class="h-5 w-5"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
 
                 <div class="team-member bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300" data-aos="fade-up" data-aos-delay="300">
-                    <img class="w-full h-56 object-cover" src="http://static.photos/people/640x360/8" alt="Team member">
+                    <img class="w-full h-56 object-cover" src="{{ '/assets/images/team/bishal-ghosh1.png' | relative_url }}" alt="Team member">
                     <div class="p-6">
                         <h3 class="text-lg font-medium text-gray-900">Bishal Ghosh</h3>
-                        <p class="mt-1 text-sm text-blue-600">Chief Investment Officer</p>
+                        <p class="mt-1 text-sm text-blue-600">Co-Founder & COO</p>
                         <p class="mt-2 text-gray-500">
-                            15 years of investment research experience. MBA in Finance from Wharton, Chartered Alternative Investment Analyst (CAIA).
+                            Applying 8 years of financial markets mastery in equity and derivatives with a tech-driven analytical edge.
                         </p>
                         <div class="mt-4 flex space-x-4">
                             <a href="#" class="text-gray-400 hover:text-blue-600">
@@ -205,24 +205,6 @@ permalink: /about/
                     </div>
                 </div>
 
-                <div class="team-member bg-white rounded-lg overflow-hidden shadow-md transition-all duration-300" data-aos="fade-up" data-aos-delay="400">
-                    <img class="w-full h-56 object-cover" src="http://static.photos/people/640x360/9" alt="Team member">
-                    <div class="p-6">
-                        <h3 class="text-lg font-medium text-gray-900">Somali Manna</h3>
-                        <p class="mt-1 text-sm text-blue-600">Head of Client Relations</p>
-                        <p class="mt-2 text-gray-500">
-                            12 years in client advisory roles. Certified Financial Planner (CFP) with expertise in retirement planning.
-                        </p>
-                        <div class="mt-4 flex space-x-4">
-                            <a href="#" class="text-gray-400 hover:text-blue-600">
-                                <i data-feather="linkedin" class="h-5 w-5"></i>
-                            </a>
-                            <a href="#" class="text-gray-400 hover:text-blue-600">
-                                <i data-feather="mail" class="h-5 w-5"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <section class="mt-16 bg-gray-50 dark:bg-gray-900 py-10">
