--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ permalink: /
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "WealthBridge helped us create a diversified mutual fund portfolio that has outperformed our expectations. Their advice was clear, and they took the time to explain everything in terms we could understand."
+                            "Earthen Capital helped us create a diversified mutual fund portfolio that has outperformed our expectations. Their advice was clear, and they took the time to explain everything in terms we could understand."
                         </p>
                     </div>
                     <div class="mt-4 flex">
@@ -302,7 +302,7 @@ permalink: /
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "As a busy professional, I needed someone to manage my investments. WealthBridge's mutual fund recommendations have helped grow my portfolio while I focus on my career. Their regular reviews give me peace of mind."
+                            "As a busy professional, I needed someone to manage my investments. Earthen Capital's mutual fund recommendations have helped grow my portfolio while I focus on my career. Their regular reviews give me peace of mind."
                         </p>
                     </div>
                     <div class="mt-4 flex">
@@ -326,7 +326,7 @@ permalink: /
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "We started investing for our daughter's education with WealthBridge's guidance. Their systematic investment plan in mutual funds has already shown impressive growth in just two years."
+                            "We started investing for our daughter's education with Earthen Capital's guidance. Their systematic investment plan in mutual funds has already shown impressive growth in just two years."
                         </p>
                     </div>
                     <div class="mt-4 flex">
