--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@ permalink: /services/
     </div>
 
     <!-- Service 2 -->
-    <!-- <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
+    <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
       <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mb-4">
         <i data-feather="dollar-sign" class="text-green-600"></i>
       </div>
@@ -64,7 +64,7 @@ permalink: /services/
       <p class="text-gray-600">
         End-to-end wealth management services tailored to achieve long-term financial stability and growth.
       </p>
-    </div> -->
+    </div>
 
     <!-- Service 3 -->
     <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
