--- a/about.html
+++ b/about.html
@@ -222,6 +222,15 @@ permalink: /about/
                     Email: earthencapital@gmail.com | Phone: +91-94763 10780
                   </p>
                 </div>
+                <br/>
+                <div class="max-w-4xl mx-auto text-center">
+                    <p class="text-gray-700 dark:text-gray-400">
+                      338/481 Dhekia, Malancha, Kharagpur (W.B.), India
+                    </p>
+                    <p class="text-gray-700 dark:text-gray-400">
+                      Email: earthencapital@gmail.com | Phone: +91-91450 35129
+                    </p>
+                  </div>
               </section>
               
         </div>
