--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ permalink: /
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <h2 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl" data-aos="fade-right">
                 <span class="block">Ready to grow your wealth?</span>
-                <span class="block text-blue-200">Contact us today for a free consultation.</span>
+                <span class="block text-blue-200 text-2xl sm:text-3xl">Contact us for a free, no-obligation discussion</span>
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0" data-aos="fade-left">
                 <div class="inline-flex rounded-md shadow">
@@ -356,12 +356,12 @@ permalink: /
                         (+91) 94763-10780
                     </a>
                 </div>
-                <div class="ml-3 inline-flex rounded-md shadow">
+                <!-- <div class="ml-3 inline-flex rounded-md shadow">
                     <a href="mailto:earthencapital@gmail.com" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 bg-opacity-60 hover:bg-opacity-90">
                         <i data-feather="mail" class="mr-2 h-4 w-4"></i>
                         Email Us
                     </a>
-                </div>
+                </div> -->
 				<div class="ml-3 inline-flex rounded-md shadow">
                     <button onclick="openModal()" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-500 bg-opacity-60 hover:bg-opacity-70">
                         <i data-feather="message-circle" class="mr-2 h-4 w-4"></i>
