--- a/calculators/index.html
+++ b/calculators/index.html
@@ -51,6 +51,20 @@ permalink: /calculators/
         <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
       </a>
     </div>
+
+    <!-- Health checkup Card -->
+    <div class="calculator-card bg-white rounded-xl p-6 shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1"  data-aos="fade-up" data-aos-delay="350">
+      <div class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-4">
+        <i data-feather="activity" class="text-orange-600"></i>
+      </div>
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Financial Health Checklist</h3>
+      <p class="text-gray-600 mb-4">Analyse your current financial position, identify key areas of focus, and discover practical ways to improve your overall financial health.</p>
+      <a href="{{ '/calculators/financial-health-checklist/' | relative_url }}" class="inline-flex items-center text-orange-600 font-medium hover:text-orange-700 transition-colors">
+        Calculate Now
+        <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
+      </a>
+    </div>
+    
   </div>     
 </main>
 <!-- CTA Section -->
