--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ permalink: /
     </div>
 
     <!-- Testimonials -->
-    <!--
+    
     <div class="bg-blue-50 py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="lg:text-center">
@@ -268,79 +268,63 @@ permalink: /
             <div class="mt-10 grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
                 <div class="bg-white p-6 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex items-center">
-                        <div class="flex-shrink-0">
-                            <img class="h-12 w-12 rounded-full" src="http://static.photos/people/200x200/4" alt="Client">
-                        </div>
+                        <div class="absolute top-4 right-4 opacity-10">
+                            <svg class="w-16 h-16 text-blue-600 transform group-hover:scale-110 transition-transform duration-500" fill="currentColor" viewBox="0 0 32 32">
+                              <path d="M10 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2zM22 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2z"></path>
+                            </svg>
+                          </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">Robert &amp; Emily Thompson</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Seshadri Mazumder</h3>
                             <p class="text-blue-600">Retirement Planning</p>
                         </div>
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "Earthen Capital helped us create a diversified mutual fund portfolio that has outperformed our expectations. Their advice was clear, and they took the time to explain everything in terms we could understand."
+                            "Earthen Capital helped me create a diversified mutual fund portfolio that has outperformed my expectation. Their advice was clear, and they took the time to explain everything in terms I could understand."
                         </p>
-                    </div>
-                    <div class="mt-4 flex">
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
                     </div>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="300">
                     <div class="flex items-center">
-                        <div class="flex-shrink-0">
-                            <img class="h-12 w-12 rounded-full" src="http://static.photos/people/200x200/5" alt="Client">
-                        </div>
+                        <div class="absolute top-4 right-4 opacity-10">
+                            <svg class="w-16 h-16 text-blue-600 transform group-hover:scale-110 transition-transform duration-500" fill="currentColor" viewBox="0 0 32 32">
+                              <path d="M10 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2zM22 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2z"></path>
+                            </svg>
+                          </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">James Rodriguez</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Avinash Yerutu</h3>
                             <p class="text-blue-600">Wealth Accumulation</p>
                         </div>
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "As a busy professional, I needed someone to manage my investments. Earthen Capital's mutual fund recommendations have helped grow my portfolio while I focus on my career. Their regular reviews give me peace of mind."
+                            "As a busy professional, I needed someone to manage my investments. Earthen Capital's wealth planning recommendations have helped grow my portfolio while I focus on my career. Their regular reviews give me peace of mind."
                         </p>
-                    </div>
-                    <div class="mt-4 flex">
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
                     </div>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-md" data-aos="fade-up" data-aos-delay="400">
                     <div class="flex items-center">
-                        <div class="flex-shrink-0">
-                            <img class="h-12 w-12 rounded-full" src="http://static.photos/people/200x200/6" alt="Client">
-                        </div>
+                        <div class="absolute top-4 right-4 opacity-10">
+                            <svg class="w-16 h-16 text-blue-600 transform group-hover:scale-110 transition-transform duration-500" fill="currentColor" viewBox="0 0 32 32">
+                              <path d="M10 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2zM22 8v8h4.2q-0.2 2.6-2.2 4.1t-4.8 1.9v2.8q4 0 7-2.8t3-7v-7h-7.2z"></path>
+                            </svg>
+                          </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">Lisa Wong</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Disha & Manas Dey</h3>
                             <p class="text-blue-600">Education Fund</p>
                         </div>
                     </div>
                     <div class="mt-4">
                         <p class="text-gray-500">
-                            "We started investing for our daughter's education with Earthen Capital's guidance. Their systematic investment plan in mutual funds has already shown impressive growth in just two years."
+                            "We started investing for our daughter's education with Earthen Capital's guidance. Their approach to risk profiling and fund selection gave us the confidence to start early. It feels great to have a professional handling our most important goal."
                         </p>
-                    </div>
-                    <div class="mt-4 flex">
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
-                        <i data-feather="star" class="h-5 w-5 text-yellow-400"></i>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    -->
 
     <!-- CTA Section -->
     <div class="bg-[#008080]" id="contact">
