--- a/services.html
+++ b/services.html
@@ -5,9 +5,6 @@ permalink: /services/
 ---
 
 <style>
-    body {
-        font-family: 'Inter', sans-serif;
-    }
     .services-hero {
         background: linear-gradient(rgba(6, 190, 182, 0.9) 0%, rgba(23, 42, 69, 0.9) 100%), url('http://static.photos/bokeh/1200x630/28');
         background-size: cover;
@@ -53,6 +50,19 @@ permalink: /services/
       <p class="text-gray-600">
         Personalized retirement planning so you can enjoy financial freedom in your golden years.
       </p>
+    </div>
+
+    <!-- Service 3 -->
+    <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
+      <div class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-4">
+        <i data-feather="sunrise" class="text-orange-600"></i>
+      </div>
+      <a href="{{ '/financial-planning/' | relative_url }}">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Financial Planning</h3>
+        <p class="text-gray-600">
+          Personalized financial planning so you can navigate your financial journey with clarity.
+        </p>
+      </a>
     </div>
 
     <!-- Service 2 -->
