--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
                         <span class="block text-blue-200">Future Together</span>
                     </h1>
                     <p class="mt-3 max-w-md mx-auto lg:mx-0 text-base text-blue-100 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
-                        Expert guidance in mutual fund advisory, investment planning, and financial education to help you achieve your goals.
+                        Your partner in wealth management. We focus on investing based on your goals and planning your finances strategically to secure your future.
                     </p>
                     <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
                         <div class="rounded-md shadow">
@@ -333,19 +333,25 @@ permalink: /
                 <span class="block">Ready to grow your wealth?</span>
                 <span class="block text-teal-100 text-xl sm:text-2xl mt-2">Book a free, no-obligation consultation today</span>
             </h2>
-            <div class="mt-8 flex flex-col gap-3 lg:flex-row lg:mt-0 lg:flex-shrink-0" data-aos="fade-left">
-                <div class="inline-flex rounded-md">
+            
+            <div class="mt-8 flex flex-col lg:mt-0 lg:flex-shrink-0" data-aos="fade-left">
+                <div class="flex flex-col gap-3 sm:flex-row lg:justify-end">
                     <a href="tel:+919476310780" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-blue-600 bg-white hover:bg-blue-50 transition-colors">
                         <i data-feather="phone" class="mr-2 h-5 w-5"></i>
                         (+91) 94763-10780
                     </a>
-                </div>
-                <div class="inline-flex rounded-md">
                     <button onclick="openModal()" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 transition-colors">
                         <i data-feather="calendar" class="mr-2 h-5 w-5"></i>
                         Book Appointment
                     </button>
                 </div>
+                <p class="mt-3 text-sm text-teal-100 lg:text-right flex items-center lg:justify-end justify-center">
+                    Need help? <span class="mx-1">Customer Care:</span> 
+                    <a href="tel:03222355171" class="text-white hover:underline flex items-center ml-1">
+                        <i data-feather="headphones" class="mr-1 h-4 w-4"></i>
+                        03222 355 171
+                    </a>
+                </p>
             </div>
         </div>
     </div>
